refactor: change api routes to match /api/.. naming convention
